Fix header spacing for clarity 5 upgrade

--- a/web/src/app/modules/shared/components/smart/context-selector/context-selector.component.scss
+++ b/web/src/app/modules/shared/components/smart/context-selector/context-selector.component.scss
@@ -18,10 +18,6 @@
   outline: none;
 }
 
-.dropdown {
-  margin: 0 0.8rem;
-}
-
 .dropdown .dropdown-toggle clr-icon {
   margin-right: 0.2rem;
 }
