--- a/web/src/app/modules/sugarloaf/components/smart/apply-yaml/apply-yaml.component.scss
+++ b/web/src/app/modules/sugarloaf/components/smart/apply-yaml/apply-yaml.component.scss
@@ -11,7 +11,7 @@
 }
 
 .header-upload {
-  margin: auto 0.8rem;
+  margin: auto 1.2rem;
   color: white;
   line-height: 50px;
   text-decoration: none;
