--- a/web/src/app/modules/sugarloaf/components/smart/namespace/namespace.component.scss
+++ b/web/src/app/modules/sugarloaf/components/smart/namespace/namespace.component.scss
@@ -19,10 +19,6 @@
   outline: none;
 }
 
-.dropdown {
-  margin: 0 0.8rem;
-}
-
 .dropdown .dropdown-toggle clr-icon {
   margin-right: 0.2rem;
 }
